# wdb-core

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/common/: error.rs  mmap.rs  mod.rs
src/config/: config.rs  config.toml  mod.rs  test_config.rs
src/core/: bucket.rs  core_entity.rs  interface.rs  mod.rs  test.rs
src/db/: builder.rs
src/local_index/: index_collections_rw_map.rs  index_module_default.rs  local_file_index.rs  mod.rs
src/local_store/: file_block.rs  file_block_manager.rs  local_store_entity.rs  mod.rs  node_value_encode_decode.rs  rwlock_cache.rs
src/util/: env.rs  mod.rs
