[package]
name = "wd_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
trait-async = "0.1.24"
anyhow = "1.0.57"
async-channel = "1.6"
wd_event = "0.3.3"
serde_json = "1.0.81"
serde = {version = "1.0.137",features= ["derive"]}
wd_run = "0.2"