[package]
name = "wdb-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wd_tools = {version = "0.5.1",features = ["point-free","md5","sync"]}
tokio = {version = "1.26.0",features = ["macros","sync","rt-multi-thread","fs","io-std","io-util","time"]}
anyhow = "1.0.69"
async-trait = "0.1.66"
thiserror = "1.0.39"
async-channel = "1.8.0"
wd_log = "0.1.5"
